src/objects/LRN_Exam_Template__c.object
<CustomObject>
    <fields>
        <fullName>Allow_25_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow 25% Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_50_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow 50% Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Free_Text_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Free Text Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Go_Previous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Go Previous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Multiple_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Multiple Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Random_Order_of_Answers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Random Order of Answers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Strikethrough__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Strikethrough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Unanswered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Unanswered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <label>% Approval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Easy_Questions__c</fullName>
        <label>% Easy Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hard_Questions__c</fullName>
        <label>% Hard Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Medium_Questions__c</fullName>
        <label>% Medium Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Answers_per_Question__c</fullName>
        <label>Number of Answers per Question</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Questions__c</fullName>
        <label>Number of Questions</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Questions_to_Validate__c</fullName>
        <label>Number of Questions to Validate</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Execute__c</fullName>
        <label>Time To Execute (min)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LRN Exam Template</label>
    <nameField>
        <label>LRN Exam Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LRN Exam Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>